message(STATUS "    ...hydrodynamics")

add_subdirectory(damping)
add_subdirectory(hydrostatic)
add_subdirectory(manoeuvring)
add_subdirectory(morison)
add_subdirectory(seakeeping)
add_subdirectory(wave_resistance)

set(SRC_FILES
#        FrTryalForce.cpp
        FrEquilibriumFrame.cpp
)

set(FRYDOM_HYDRODYNAMICS_SOURCES "")
foreach(file ${SRC_FILES})
    list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${file})
endforeach()

list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_DAMPING_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_HYDROSTATIC_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_MANOEUVRING_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_MORISON_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_SEAKEEPING_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_WAVERESISTANCE_SOURCES})

set(FRYDOM_HYDRODYNAMICS_SOURCES ${FRYDOM_HYDRODYNAMICS_SOURCES} PARENT_SCOPE)
