message(STATUS "        ...seakeeping")



add_subdirectory(hdb)
add_subdirectory(linear_excitation)
add_subdirectory(linear_radiation)
add_subdirectory(second_order_drift)


set(SRC_FILES "")


set(FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES "")
foreach(file ${SRC_FILES})
    list(APPEND FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${file})
endforeach()

list(APPEND FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES ${FRYDOM_HYDRODYNAMICS_SEAKEEPING_HDB_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES ${FRYDOM_HYDRODYNAMICS_SEAKEEPING_LINEAR_EXCITATION_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES ${FRYDOM_HYDRODYNAMICS_SEAKEEPING_LINEAR_RADIATION_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES ${FRYDOM_HYDRODYNAMICS_SEAKEEPING_SECOND_ORDER_DRIFT_SOURCES})


set(FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES ${FRYDOM_HYDRODYNAMICS_SEAKEEPING_SOURCES} PARENT_SCOPE)
