message(STATUS "    ...linear hydrodynamic")

add_subdirectory(excitation)
add_subdirectory(radiation)
add_subdirectory(hdb)
add_subdirectory(second_order_drift)

set(FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES "")

list(APPEND FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES ${FRYDOM_HYDRODYNAMICS_EXCITATION_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES ${FRYDOM_HYDRODYNAMICS_RADIATION_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES ${FRYDOM_HYDRODYNAMICS_HDB_SOURCES})
list(APPEND FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES ${FRYDOM_HYDRODYNAMICS_SECONDORDERDRIFT_SOURCES})

set(FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES ${FRYDOM_HYDRODYNAMICS_LINEAR_SOURCES} PARENT_SCOPE)
